@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 1.0-4
-Date: 2012-02-21
+Version: 1.0-5
+Date: 2012-02-25
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
